[package]
name = "lrgest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1

[dependencies]
color-print = "0.3.4"
bitflags = "1.3.2"